<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/root_view_background"
    android:background="@color/defaultBackgroundColor">

    <TextView
        android:id="@+id/tv_callScreen_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/outgoingCall"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/tv_callStatus"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/calling"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_callScreen_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_brand_logo"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_width="214dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/tv_callStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_below="@+id/tv_callStatus" />

    <TextView
        android:id="@+id/tv_callContext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="test call"
        android:textSize="21sp"
        android:textColor="@android:color/white"
        android:maxLines="2"
        android:ellipsize="end"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_brand_logo"/>

    <TextView
        android:id="@+id/tv_busy_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/user_is_busy_on_another_call"
        android:textSize="21sp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/tv_callContext"
        app:layout_constraintBottom_toTopOf="@+id/iv_decline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <ImageView
        android:id="@+id/iv_decline"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ct_call_decline"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_poweredBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poweredBy"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
